fixed some mistakes.

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
   <link href="style.css" rel="stylesheet" type="text/css">
   
-  <head>1000 days and counting!</head>
+  <title>1000 days and counting!</title>
 
 <body>
   <div id="bg">
